--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,15 +1,16 @@
 general:
-  data_id: /home/obola/repositories/cicero-scm-surrogate/data/20250930_204915
+  data_id: /home/obola/repositories/cicero-scm-surrogate/data/20251001_133611
   device: cuda
 model:
   model_type: lstm
-  hidden_dims: 256
-  num_layers: 2
+  hidden_dims: 128
+  num_layers: 1
   lr: 0.001
   weight_decay: 0.0001
-  epochs: 5
-  batch_size: 256
+  epochs: 10
+  batch_size: 512
   num_workers: 2
+  early_stopping: 30
 scheduler:
   factor: 0.5
   patience: 5
