--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,13 +1,13 @@
 general:
-  data_id: /home/obola/repositories/cicero-scm-surrogate/data/20251001_133611
+  data_id: /home/obola/repositories/cicero-scm-surrogate/data/20250930_223742
   device: cuda
 model:
-  model_type: lstm
+  model_type: tcn
   hidden_dims: 128
-  num_layers: 1
+  num_layers: 5
   lr: 0.001
   weight_decay: 0.0001
-  epochs: 10
+  epochs: 250
   batch_size: 512
   num_workers: 2
   early_stopping: 30
