--- a/config/marl.yaml
+++ b/config/marl.yaml
@@ -3,25 +3,27 @@ marl:
     data_dir: /home/obola/repositories/cicero-scm-surrogate/data/20250930_223742
     climate_engine: net
     training_run_id: 20251001_104419_lstm_128_1
-    marl_run_name: homogenous_agents
+    marl_run_name: heterogenous_agents
+    log_episode_trajectories: True       # master ON/OFF switch
+    log_dir: marl_logs                # where to save .npz files (optional; set None to skip saving to disk)
     surrogate_device: cuda
     surrogate_autocast: false
     surrogate_use_half: false
-    random_seed: 0
+    random_seed: 2
   environment:
-    num_agents: 4
-    baseline_emission_shares: [0.25, 0.25, 0.25, 0.25]
+    num_agents: 10
+    baseline_emission_shares: [0.35, 0.15, 0.10, 0.05, 0.02, 0.01, 0.03, 0.14, 0.1, 0.05]
     horizon: 35
-    rollout_length: 5
+    rollout_length: 15
   economics:
     costs:
-      climate_damage_costs: [100.0, 100.0, 100.0, 100.0]
-      energy_costs: [0.01, 0.01, 0.01, 0.01]
-      methane_costs: [0.01, 0.01, 0.01, 0.01]
-      agriculture_costs: [0.01, 0.01, 0.01, 0.01]
-      adaptation_costs: [10.0, 10.0, 10.0, 10.0]
+      climate_damage_costs: [50.0, 50.0, 100.0, 100.0, 100.0, 25.0, 25.0, 50.0, 50.0, 50.0]
+      energy_costs: [0.001, 0.01, 0.1, 10.0, 0.1, 0.001, 0.01, 0.1, 10.0, 0.1]
+      methane_costs: [0.001, 0.01, 10.0, 0.1, 0.1, 0.001, 0.01, 0.1, 10.0, 0.1]
+      agriculture_costs: [0.1, 10.0, 0.01, 0.001, 0.1, 0.001, 0.01, 0.1, 10.0, 0.1]
+      adaptation_costs: [10.0, 0.1, 0.01, 0.001, 0.1, 0.001, 0.01, 0.1, 10.0, 0.1]
     prevention_decay: 0.95
-    max_prevention_benefit: 0.0
+    max_prevention_benefit: 0.5
   actions:
     energy_levels: [0.0, 0.5, 1.0]
     methane_levels: [0.0, 0.5, 1.0]
@@ -29,19 +31,18 @@ marl:
     adaptation_levels: [0.0, 0.03, 0.08]
     policy_matrix:
       energy:
-        CO2_FF: -0.040
+        CO2_FF: -0.050
         CH4: -0.005
         N2O: -0.005
-        CO2_AFOLU: 0.000
         SO2: -0.050
       methane:
-        CH4: -0.035
+        CH4: -0.040
       agriculture:
-        CO2_AFOLU: -0.040
-        CH4: -0.010
-        N2O: -0.040
+        CO2_AFOLU: -0.04
+        CH4: -0.005
+        N2O: -0.03
   training:
-    num_iterations: 100
+    num_iterations: 500
     greedy_eval_interval: 2
     output_dir: marl_results
     seed: 42
@@ -49,7 +50,7 @@ marl:
       framework: torch
       model:
         use_lstm: true
-        lstm_cell_size: 64
+        lstm_cell_size: 128
         vf_share_layers: false
       train_batch_multiplier: 8
       minibatch_multiplier: 2
@@ -58,20 +59,23 @@ marl:
       lr: 0.0002
       lr_schedule:
         - [0, 0.0002]
-        - [150000, 0.0001]
-        - [250000, 0.00005]
+        - [200000, 0.0001]
+        - [400000, 0.00005]
+        - [750000, 0.00003]
+        - [950000, 0.00001]
       clip_param: 0.3
-      entropy_coeff: 0.02
+      entropy_coeff: 0.03
       entropy_coeff_schedule:
-        - [0, 0.02]
-        - [100000, 0.01]
-        - [200000, 0.003]
-        - [250000, 0.001]
-        - [300000, 0.0001]
+        - [0, 0.03]
+        - [200000, 0.02]
+        - [400000, 0.01]
+        - [500000, 0.0005]
+        - [750000, 0.0001]
+        - [850000, 0.00001]
       rollout:
         num_env_runners: 1
         num_envs_per_runner: 32
-        fragment_length: horizon
+        fragment_length: auto
         num_gpus_per_env_runner: 1
         sample_timeout_s: 1200
       resources:
